--- a/Task1/BlueJays/Templates/index.html
+++ b/Task1/BlueJays/Templates/index.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% block title %}
+    Home
+{% endblock %}
 {% block main %}
 <h1 class="titleText mt-3">Teams</h1>
 <div class="row g-3">
