--- a/Task1/BlueJays/Templates/leaderboards.html
+++ b/Task1/BlueJays/Templates/leaderboards.html
@@ -10,28 +10,31 @@
         <div class="card border-0">
             <div class="card-header text-center titleText">{{statNames[leagueLeaders[i]['leaderCategory']]}}</div>
             <div class="card-body p-0 rounded-bottom">
-                <table class="table table-borderless mb-0">
-                    <thead>
-                        <tr class="tableHeader">
-                            <th>Rank</th>
-                            <th>Team</th>
-                            <th>Player</th>
-                            <th>Pos</th>
-                            <th>{{statAcronyms[leagueLeaders[i]['leaderCategory']]}}</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for j in range(0, 3) %}
-                        <tr class="leaderRow">
-                            <td>{{leagueLeaders[i]['leaders'][j]['rank']}}</td>
-                            <td><img src="https://www.mlbstatic.com/team-logos/{{leagueLeaders[i]['leaders'][j]['team']['id']}}.svg" height="25" width="25" /> <a href="/teams/{{leagueLeaders[i]['leaders'][j]['team']['id']}}" class="nostyle">{{abbreviations[leagueLeaders[i]['leaders'][j]['team']['name']]}}</a></td>
-                            <td><img src="https://content.mlb.com/images/headshots/current/60x60/{{leagueLeaders[i]['leaders'][j]['person']['id']}}.png" height="30" width="30" /> <a href="players/{{leagueLeaders[i]['leaders'][j]['person']['id']}}" class="nostyle">{{leagueLeaders[i]['leaders'][j]['person']['lastName']}}, {{leagueLeaders[i]['leaders'][j]['person']['firstName']}}</a></td>
-                            <td class="secondaryText">{{leagueLeaders[i]['leaders'][j]['person']['position']}}</td>
-                            <td>{{leagueLeaders[i]['leaders'][j]['value']}}</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                <div class="table-responsive">
+                    <table class="table table-borderless mb-0">
+                        <thead>
+                            <tr class="tableHeader">
+                                <th>Rank</th>
+                                <th>Team</th>
+                                <th>Player</th>
+                                <th>Pos</th>
+                                <th>{{statAcronyms[leagueLeaders[i]['leaderCategory']]}}</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for j in range(0, 3) %}
+                            <tr class="leaderRow">
+                                <td>{{leagueLeaders[i]['leaders'][j]['rank']}}</td>
+                                <td style="white-space: nowrap;"><img src="https://www.mlbstatic.com/team-logos/{{leagueLeaders[i]['leaders'][j]['team']['id']}}.svg" height="25" width="25" /> <a href="/teams/{{leagueLeaders[i]['leaders'][j]['team']['id']}}" class="nostyle">{{abbreviations[leagueLeaders[i]['leaders'][j]['team']['name']]}}</a></td>
+                                <td style="white-space: nowrap;"><img src="https://content.mlb.com/images/headshots/current/60x60/{{leagueLeaders[i]['leaders'][j]['person']['id']}}.png" height="30" width="30" /> <a href="players/{{leagueLeaders[i]['leaders'][j]['person']['id']}}" class="nostyle">{{leagueLeaders[i]['leaders'][j]['person']['lastName']}}, {{leagueLeaders[i]['leaders'][j]['person']['firstName']}}</a></td>
+                                <td class="secondaryText">{{leagueLeaders[i]['leaders'][j]['person']['position']}}</td>
+                                <td>{{leagueLeaders[i]['leaders'][j]['value']}}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+
             </div>
         </div>
     </div>
