--- a/Task1/BlueJays/Templates/team.html
+++ b/Task1/BlueJays/Templates/team.html
@@ -3,10 +3,10 @@
     Team
 {% endblock %}
 {% block main %}
-<div class="row mt-3">
-    <div class="col-12 d-flex flex-row align-items-center">
+<div class="row mt-3 justify-content-between">
+    <div class="col-12 col-sm-8 d-flex flex-row align-items-center">
         <div class="circle me-3 d-flex align-items-center justify-content-center">
-            <img src="https://www.mlbstatic.com/team-logos/{{standing['team']['id']}}.svg" height="55" weight="55" />
+            <img src="https://www.mlbstatic.com/team-logos/{{standing['team']['id']}}.svg" height="50" weight="50" />
         </div>
         <div class="d-flex flex-column">
             <h3 class="titleText">{{standing['team']['name']}}</h3>
@@ -15,25 +15,25 @@
                 <h6>{{standing['leagueRecord']['wins']}} - {{standing['leagueRecord']['losses']}}  ({{standing['leagueRecord']['pct']}})&nbsp;&nbsp;&#x2022;&nbsp;&nbsp;{{standing['gamesBack']}} GB</h6>
             </div>
         </div>
-        <div class="ms-auto">
-            <div class="btn-container">
-                <label class="switch btn-color-mode-switch">
-                    <input value="1"
-                           id="color_mode"
-                           type="checkbox"
-                           onchange="switchTable(this)" />
-                    <label class="btn-color-mode-switch-inner"
-                           data-off="Hitters"
-                           data-on="Pitchers"
-                           for="color_mode"
-                           style="cursor: pointer;">
-                    </label>
+    </div>
+    <div class="col-12 col-sm-4 d-flex align-items-center justify-content-center">
+        <div class="ms-0 ms-sm-auto btn-container">
+            <label class="switch btn-color-mode-switch">
+                <input value="1"
+                       id="color_mode"
+                       type="checkbox"
+                       onchange="switchTable(this)" />
+                <label class="btn-color-mode-switch-inner"
+                       data-off="Hitters"
+                       data-on="Pitchers"
+                       for="color_mode"
+                       style="cursor: pointer;">
                 </label>
-            </div>
+            </label>
         </div>
     </div>
 </div>
-<div class="row mt-3 g-2 mb-5">
+<div class="row mt-1 mt-md-3 g-2 mb-5">
     <div class="col-12" style="display: block" id="hitter">
         <div class="card border-0">
             <div class="card-body p-0 rounded">
@@ -163,7 +163,7 @@
 <h1 class="titleText mt-4">Team News</h1>
 <div class="row g-3 mb-5">
     {% for i in range(0,4) %}
-    <div class="col-6 col-lg-3">
+    <div class="col-12 col-sm-6 col-lg-3">
         <div class="card border-0 rounded-0 rounded-bottom h-100">
             <a href="{{newsFeed[i]['link']}}"><img src="{{newsFeed[i]['img']}}" class="card-img-top rounded-0" alt="..." /></a>
             <div class="card-body d-flex flex-column">
