Updated player page

--- a/Task1/BlueJays/Templates/player.html
+++ b/Task1/BlueJays/Templates/player.html
@@ -26,7 +26,7 @@
         <div class="d-flex flex-row align-items-center ps-1 ps-md-3">
             <img src="https://content.mlb.com/images/headshots/current/60x60/{{player['id']}}@2x.png" class="playerPicture" />
             <div class="d-flex flex-column">
-                <h3 class="titleText playerName">{{player['fullName']}}</h3>
+                <h3 class="titleText playerName mb-0">{{player['fullName']}}</h3>
                 <div class="d-flex flex-row align-items-center">
                     <h6 class="secondaryText">{{player['primaryPosition']['abbreviation']}}</h6>
                     &nbsp;
