Reduced margin between team news and team roster

--- a/Task1/BlueJays/Templates/team.html
+++ b/Task1/BlueJays/Templates/team.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 </div>
-<div class="row mt-1 mt-md-3 g-2 mb-5">
+<div class="row mt-1 mt-md-3 g-2">
     <div class="col-12" style="display: block" id="hitter">
         <div class="card border-0">
             <div class="card-body p-0 rounded">
